# ha-timescaledb-recorder

./: CLAUDE.md  README.md  hacs.json  pyproject.toml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md
.planning/notes/: robust-ingestion-design.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md  questions.md
custom_components/ha_timescaledb/: __init__.py  config_flow.py  const.py  ingester.py  manifest.json  schema.py  strings.json
custom_components/ha_timescaledb_recorder/: __init__.py  backfill.py  backfill_gaps.py  config_flow.py  const.py  ingester.py  issues.py  manifest.json  meta_worker.py  notifications.py  overflow_queue.py  retry.py  schema.py  states_worker.py  strings.json  syncer.py  watchdog.py  worker.py
custom_components/timescaledb_recorder/: __init__.py  backfill.py  backfill_gaps.py  binary_sensor.py  (+16 more)
scripts/: backfill_gaps.py
tests/: conftest.py  test_backfill.py  test_binary_sensor.py  test_config_flow.py  test_const_phase3.py  test_ingester.py  test_init.py  test_issues.py  test_meta_worker.py  test_notifications.py  test_overflow_queue.py  test_persistent_queue.py  test_registry_listener.py  test_retry.py  test_schema.py  test_sensor.py  test_state_listener.py  test_states_worker.py  test_strings_phase3.py  test_syncer.py  test_watchdog.py  test_worker.py
(+141 files in other folders)
