[project]
name = "ha-timescaledb-recorder"
version = "0.1.0"
requires-python = ">=3.14.2"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "asyncpg==0.31.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-homeassistant-custom-component>=0.13.320",
]
